--- a/xv6-public/Makefile
+++ b/xv6-public/Makefile
@@ -145,10 +145,8 @@ vectors.S: vectors.pl
 
 ULIB = ulib.o usys.o printf.o umalloc.o
 
-# Change _n for ELF Task
-
 _%: %.o $(ULIB)
-	$(LD) $(LDFLAGS)  -e main -Ttext 0 -o $@ $^ 
+	$(LD) $(LDFLAGS) -N -e main -Ttext 0 -o $@ $^
 	$(OBJDUMP) -S $@ > $*.asm
 	$(OBJDUMP) -t $@ | sed '1,/SYMBOL TABLE/d; s/ .* / /; /^$$/d' > $*.sym
 
